fix onebox header misalignment issue

--- a/app/assets/stylesheets/common/base/onebox.scss
+++ b/app/assets/stylesheets/common/base/onebox.scss
@@ -118,7 +118,7 @@ aside.onebox {
 
     h3, h4 {
       font-size: 1.17em;
-      margin: 10px 0;
+      margin: 0 0 10px 0;
     }
 
     a[href] {
